# fallbackdm

./: Cargo.toml  DESIGN.md  LICENSE  README.md
.github/workflows/: rust.yml
src/: input.rs  main.rs  pam.rs
systemd/: fallbackdm.service
